Attempt #2 at fixing sticky nav on ios

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ section iframe {
 
 .header {
     width: 100%;
-    position: relative;
+    position: -webkit-sticky;
     padding: 40px 0 0;
     display: initial;
     background-color: white;
